# rotImg

./: CMakeLists.txt  LICENSE  README.md
include/: bmpIO.h  imgFormat.h  lookupTable.h  rotImgLib.h
src/: bmpIO.c  imgFormat.c  lookupTable.c  main.c  rotLib.c
